# ketsuno

./: .env.example  .gitignore  Cargo.toml  README.md  ya-chan.yaml
migrations/2023-01-17-211255_users/: down.sql  up.sql
migrations/2023-01-19-222508_roles/: down.sql  up.sql
src/: main.rs  utils.rs
src/controllers/: basic_controller.rs  mod.rs  user.rs
src/database/: schema.rs  users.rs
src/enumeration/: errors.rs
src/errors/: mod.rs  string.rs
src/models/: app.rs  mod.rs  roles.rs  users.rs
src/tests/: mod.rs  utils.rs
src/tests/validator/: users.rs
src/validator/: users.rs
